Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - image: xugxnx/flask-hello-world:v1
        name: flask-hello-world
        ports:
        - containerPort: 5000
