Ingress.yml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: flask-ingress
  spec:
    rules:
    - host: hello.com
      http:
        paths:
        - path: /
          backend:
            serviceName: flask-service
            servicePort: 80
